# dbt_artifacts

./: .editorconfig  .gitignore  .python-version  CONTRIBUTING.md  README.md  ROADMAP.md  Taskfile.yml  catalog.json  compose.yml  dbt_project.yml  graph.gpickle  graph_summary.json  manifest.json  packages.yml  partial_parse.msgpack  profiles.yml  pyproject.toml  run_results.json  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
docs/: MAINTAINERS.md  catalog.json  dev-workflow.md  index.html  manifest.json  run_results.json
init-scripts/: progress.sh
integration_test_project/: dbt_project.yml  docker-compose.yml  example-env.sh  package-lock.yml  profiles.yml  run_tests.sh
integration_tests/: dbt_project.yml  example-env.sh  packages.yml  profiles.yml
macros/: _macros.yml  artifact_run.sql  column_identifier.sql  create_artifact_resources.sql  create_dbt_artifacts_tables.sql  create_exposures_table_if_not_exists.sql  create_invocations_table_if_not_exists.sql  create_metadata_schema.sql  create_metadata_table.sql  create_model_executions_table_if_not_exists.sql  create_models_table_if_not_exists.sql  create_seed_executions_table_if_not_exists.sql  create_seeds_table_if_not_exists.sql  create_snapshot_executions_table_if_not_exists.sql  create_snapshots_table_if_not_exists.sql  create_sources_table_if_not_exists.sql  create_table_if_not_exists.sql  create_test_executions_table_if_not_exists.sql  create_tests_table_if_not_exists.sql  dedupe_artifacts_v1.sql  dedupe_artifacts_v2.sql  executions__aggregated.sql  (+29 more)
(+294 files in other folders)
